[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scritps/HUDCanvasLayer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="HUDCanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLeftLabel" type="Label" parent="."]
modulate = Color( 0.0666667, 0.862745, 0.321569, 1 )
anchor_left = -0.0171875
anchor_top = 1.00208
anchor_right = 0.982813
anchor_bottom = 1.00208
margin_left = 269.0
margin_top = -469.0
margin_right = -350.0
margin_bottom = -432.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="XLabel" type="Label" parent="."]
anchor_top = 0.997917
anchor_right = 1.0
anchor_bottom = 0.997917
margin_left = 326.0
margin_top = -461.0
margin_right = -302.0
margin_bottom = -436.0
custom_fonts/font = SubResource( 2 )
text = "x"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreRightLabel" type="Label" parent="."]
modulate = Color( 0.0196078, 0.054902, 0.976471, 1 )
anchor_top = 0.989583
anchor_right = 1.0
anchor_bottom = 0.989583
margin_left = 383.0
margin_top = -464.0
margin_right = -236.0
margin_bottom = -427.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
margin_left = 318.283
margin_top = 39.0551
margin_right = 346.283
margin_bottom = 64.0551
custom_fonts/font = SubResource( 4 )
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Button" type="Button" parent="."]
margin_left = 284.0
margin_top = 68.0
margin_right = 382.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 5 )
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
